Fixed overflow issue in search tab

--- a/styles/bootstrap/application.css
+++ b/styles/bootstrap/application.css
@@ -32,6 +32,10 @@ img.mimeicon {
   text-shadow: none;
 }*/
 
+.tab-content {
+  overflow: visible;
+}
+
 .form-help {
   color: #0072B9;
   cursor: default;
